# CMake_SocketLib

./: .gitignore  Build.sh  CMakeLists.txt
include/: IPEndpoint.h  IPVersion.h  IncludeMe.h  NetworkInitializer.h  ServiceStructs.h  Socket.h  SocketHandle.h  SocketOption.h  SocketResult.h
src/: IPEndpoint.cpp  Socket.cpp
